--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "nlw-rocketseat",
   "main": "src/server.js",
   "scripts": {
-    "start": "npm install && nodemon src/server.js",
+    "start": "nodemon src/server.js",
     "dev": "nodemon src/server.js",
+    "install": "npm install && nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
