--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon src/server.js",
     "dev": "nodemon src/server.js",
-    "install": "npm install && node src/server.js",
+    "startProject": "npm install && node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
